--- a/surveyformcodecamp.html
+++ b/surveyformcodecamp.html
@@ -9,5 +9,87 @@
 <body>
   <!-- REFERENSI -->
   <!-- <a href="https://survey-form.freecodecamp.rocks/"></a> -->
+   <header class="judul">
+    <h2>freeCodeCamp Survey Form</h2>
+    <h3 class="short-gratitude"><em>Thank you for taking the time to help us improve the platform</em></h3>
+   </header>
+      
+   <section class="konten-form">
+    <div class="konten-form2">
+    <form action="" class="form-register">
+    <div class="name-kontainer">
+      <label for="name">Name</label> 
+      <div class="layout-name">
+      <input type="text" name="Name" id="Name" placeholder="Enter your name" class="nama">
+    </div>
+    </div>
+
+    <div class="email-kontainer">
+      <label for="email">Email</label>
+      <input type="email" name="Email" id="email" placeholder="Enter your email" class="email">
+    </div>
+
+    <div class="age-kontainer">      
+      <label for="age">Age (optional)</label>
+      <input type="number" name="Age" id="age" min="1" max="40" placeholder="Age" class="age">
+    </div>
+
+    <div class="role-kontainer">
+      <label for="">Which option best describes your current role?</label>
+      <select name="" id="" >
+        <option value="" disabled selected >Select current role</option>
+        <option value="">Student</option>
+        <option value="">Full Time Job</option>
+        <option value="">Full Time Learner</option>
+        <option value="">Prefer Not To Say</option>
+        <option value="">Other</option>
+      </select>
+    </div>
+
+    <div class="recommend-kontainer">
+      <label for="">Would you recommend freeCodeCamp to a friend?</label>
+      <input type="radio" name="" id="">Definitely
+      <input type="radio" name="" id="">Maybe
+      <input type="radio" name="" id="">Not Sure
+    </div>
+
+    <div class="feature-kontainer">
+      <label for="">What is your favorite feature of freeCodeCamp?</label>
+      <select name="" id="" >
+        <option value="" disabled selected >Select an option</option>
+        <option value="">Challenges</option>
+        <option value="">Projects</option>
+        <option value="">Community</option>
+        <option value="">Open Source</option>
+      </select>
+    </div>
+
+    <div class="improved-kontainer">
+      <label for="">What would you like to see improved? (Check all that apply)</label>
+      <input type="checkbox" name="" id="">Front-end Projects
+      <input type="checkbox" name="" id="">Back-end Projects
+      <input type="checkbox" name="" id="">Data Visualization
+      <input type="checkbox" name="" id="">Challenges
+      <input type="checkbox" name="" id="">Open Source Community
+      <input type="checkbox" name="" id="">Gitter help rooms
+      <input type="checkbox" name="" id="">Videos
+      <input type="checkbox" name="" id="">City Meetups
+      <input type="checkbox" name="" id="">Wiki
+      <input type="checkbox" name="" id="">Forum
+      <input type="checkbox" name="" id="">Additional Courses
+    </div>
+
+    <div class="any-kontainer">
+      <label for="">Any comments or suggestions?</label>
+      <textarea name="" id="" placeholder="Enter your comment here"></textarea>
+    </div>
+    <div class="button-kontainer">
+      <button type="submit">
+        Submit
+      </button>
+    </div>
+    </form>
+  </div>
+   </section>
 </body>
 </html>
