selesai form nya tetapi tidak ada media queries

--- a/surveyformcodecamp.html
+++ b/surveyformcodecamp.html
@@ -70,7 +70,7 @@
 
           <div class="recommend-kontainer">
             <label for="">Would you recommend freeCodeCamp to a friend?</label>
-
+            <div>
             <input
               type="radio"
               name="recommend-to-a-friend"
@@ -79,6 +79,7 @@
             /><label for="definitely" class="label-definitely"
               >Definitely</label
             >
+          </div>
             <div>
               <input
                 type="radio"
@@ -212,12 +213,10 @@
               id=""
               placeholder="Enter your comment here"
               class="comment-suggestion"
-              cols="90"
-              rows="8"
             ></textarea>
           </div>
 
-          <div class="button-kontainer">
+          <div class="button-kontainer ">
             <button type="submit" class="button-submit submitted">Submit</button>
           </div>
         </form>
